# qontinui-train

./: .gitignore  .pre-commit-config.yaml  AGENT_HANDOFF.md  README.md  RESEARCH.md  pyproject.toml  requirements.txt
.pre-commit-hooks/: block-claude-attribution.sh
configs/: mae_pretrain.yaml  vit_base.yaml  vit_large.yaml  wandb_config.yaml
data/screenshot_sequences/: README.md  __init__.py
data_generation/: __init__.py  renderers.py  synthetic_ui.py
docs/: PRIVACY.md
docs/research/: distributed_training.md  pretraining_methods.md  vit_architecture.md
evaluation/: __init__.py  evaluate.py  grounding_eval.py  metrics.py  report.py  reproduction_check.py
evaluation/benchmarks/: README.md  __init__.py  _common.py  external_app.py  osworld_g.py  screenspot_pro.py  screenspot_v2.py
models/: __init__.py
models/architectures/: __init__.py  detection_head.py  vit.py
models/pretraining/: __init__.py  mae.py
models/state_detection/: README.md  __init__.py  region_proposal_network.py  transition_predictor.py
qontinui_train/: __init__.py
qontinui_train/button_detection/: __init__.py  inference.py  train_button_detector.py  utils.py
qontinui_train/data_preparation/: __init__.py  dataset_augmentation.py  dataset_generator.py  dataset_labeler.py  dataset_manager.py  visualize_dataset.py
qontinui_train/evaluation/: __init__.py  shadow_eval.py
qontinui_train/export/: __init__.py  (+5 more)
reference/: README.md
training/: __init__.py  distributed_train.py  pretrain.py  train.py  train_state_detector.py
utils/: __init__.py  experiment_tracking.py
(+10 files in other folders)
